--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ main{
 
 /* banner styles */
 .top-banner{
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(22, 22, 22);
     display: flex;
     align-items: center;
     margin-top: 40px;
@@ -54,6 +54,7 @@ main{
     margin-top: 100px;
     display: flex;
     width: 100%;
+    padding-bottom: 100px;
 }
 
 /* navigation menu */
@@ -61,7 +62,7 @@ nav{
     height: 250px;
     width: 250px;
     border-radius: 10px;
-    background-color: black;
+    background-color: rgb(22, 22, 22);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -95,7 +96,7 @@ nav a{
     gap: 20px;
 }
 .blog{
-    border: 1px solid rgb(206, 206, 206);
+    border: 1px solid rgba(0, 0, 0, 0.05);;
     border-radius: 10px;
 }
 .blogs .blog img{
@@ -126,4 +127,39 @@ nav a{
 }
 .blogs .blog .blog-bottom p{
     padding-right: 20px;
+}
+
+/* footer styles */
+footer{
+    background-color: rgb(22, 22, 22);
+    color: white;
+    text-align: center;
+    padding: 80px;
+}
+.hr{
+    margin: 30px 50px;
+    border: none;
+    height: 1px;
+    background-color: rgb(36, 36, 36);
+}
+footer .links{
+    display: flex;
+    justify-content: center;
+}
+footer .links a{
+    text-decoration: none;
+    color: rgb(180, 180, 180);
+    margin: 0 20px;
+}
+footer .social-media {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+footer .social-media a {
+    text-decoration: none;
+    color: rgb(180, 180, 180);
+    margin: 0 20px;
+    font-size: 25px;
 }
