--- a/styles/match.css
+++ b/styles/match.css
@@ -127,6 +127,31 @@
     }
 }
 
+/* animation */
+@keyframes player {
+    0% {
+        transform: scale(0.5) translateX(50px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(1) translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes left-transition {
+    0% {
+        opacity: 0;
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 /* common settings */
 body {
     font-family: 'Roboto', sans-serif;
@@ -149,11 +174,22 @@ main {
     border-radius: 20px;
 }
 
+.stage {
+    width: 100%;
+    height: 100%;
+}
+
+.stage .animate {
+    position: relative;
+    animation: player 2s ease-in-out 0s 1 alternate;
+}
+
 .banner-text {
     width: 50%;
     color: white;
     padding-left: 80px;
     padding-bottom: 80px;
+    animation: left-transition 0.75s;
 }
 
 .banner-text h1 {
@@ -172,6 +208,10 @@ main {
     padding: 2% 5%;
     background-color: red;
     border-radius: 5px;
+}
+
+.banner-text a:hover {
+    background-color: rgb(255, 70, 70);
 }
 
 .banner-image {
@@ -240,7 +280,7 @@ nav a {
     padding: 40px;
 }
 
-.matches .match-card .match{
+.matches .match-card .match {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
